# PGPatcher

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  buildRelease.ps1  linux_port_correction.txt  nexus-description.bb  vcpkg.json
.github/: copilot-instructions.md
PGLib/: CMakeLists.txt
PGLib/cshaders/: ConvertToHDR.comp  CountAlphaValues.comp  ParallaxToCM.comp  SSSFix.comp  SSSFix.hlsl
PGLib/include/: BethesdaDirectory.hpp  BethesdaGame.hpp  Logger.hpp  ModManagerDirectory.hpp  NIFUtil.hpp  PGCache.hpp  PGD3D.hpp  PGDiag.hpp  PGDirectory.hpp  PGGlobals.hpp  PGMeshPermutationTracker.hpp  PGModManager.hpp  PGPatcher.hpp  PGPlugin.hpp  ParallaxGen.hpp  ParallaxGenD3D.hpp  ParallaxGenDirectory.hpp  ParallaxGenPlugin.hpp  ParallaxGenRunner.hpp  ParallaxGenTask.hpp  ParallaxGenUtil.hpp  ParallaxGenWarnings.hpp
PGLib/include/common/: BethesdaDirectory.hpp  BethesdaGame.hpp
PGLib/include/handlers/: HandlerLightPlacerTracker.hpp
PGLib/include/patchers/: PatcherMeshGlobalFixEffectLightingCS.hpp  PatcherMeshGlobalParticleLightsToLP.hpp  PatcherMeshPostFixSSS.hpp  PatcherMeshPostHairFlowMap.hpp  PatcherMeshPostRestoreDefaultShaders.hpp  PatcherMeshPreDisableMLP.hpp  PatcherMeshPreFixEffectLightingCS.hpp  PatcherMeshPreFixMeshLighting.hpp  PatcherMeshPreFixTextureSlotCount.hpp  PatcherMeshShaderComplexMaterial.hpp  PatcherMeshShaderDefault.hpp  PatcherMeshShaderTransformParallaxToCM.hpp  PatcherMeshShaderTruePBR.hpp  PatcherMeshShaderVanillaParallax.hpp  PatcherTextureGlobalConvertToHDR.hpp  PatcherTextureHookConvertToCM.hpp  PatcherTextureHookFixSSS.hpp
PGLib/include/patchers/base/: Patcher.hpp  PatcherMesh.hpp  PatcherMeshGlobal.hpp  PatcherMeshPost.hpp  PatcherMeshPre.hpp  PatcherMeshShader.hpp  PatcherMeshShaderTransform.hpp  PatcherTexture.hpp  PatcherTextureGlobal.hpp  PatcherTextureHook.hpp  PatcherUtil.hpp
PGLib/include/pgutil/: PGEnums.hpp  PGMeshPermutationTracker.hpp  PGNIFUtil.hpp  PGTypes.hpp
PGLib/include/util/: CRC32OStream.hpp  CRC32OStreamBuf.hpp  ContainerUtil.hpp  EnumStringHelper.hpp  ExceptionHandler.hpp  FileSaver.hpp  FileUtil.hpp  Logger.hpp  MeshTracker.hpp  NIFUtil.hpp  ParallaxGenUtil.hpp  StringUtil.hpp  TaskPoolRunner.hpp  TaskQueue.hpp  TaskTracker.hpp
PGLib/shaders/: ParallaxToCM.hlsl  SSSFix.hlsl
PGLib/src/: BethesdaDirectory.cpp  BethesdaGame.cpp  ModManagerDirectory.cpp  NIFUtil.cpp  PGCache.cpp  PGD3D.cpp  PGDiag.cpp  PGDirectory.cpp  PGGlobals.cpp  PGMeshPermutationTracker.cpp  PGModManager.cpp  PGPatcher.cpp  PGPlugin.cpp  ParallaxGen.cpp  ParallaxGenD3D.cpp  ParallaxGenDirectory.cpp  ParallaxGenPlugin.cpp  ParallaxGenRunner.cpp  ParallaxGenTask.cpp  ParallaxGenUtil.cpp  ParallaxGenWarnings.cpp
PGLib/src/common/: BethesdaDirectory.cpp  BethesdaGame.cpp
PGLib/src/handlers/: HandlerLightPlacerTracker.cpp
PGLib/src/patchers/: PatcherMeshGlobalFixEffectLightingCS.cpp  PatcherMeshGlobalParticleLightsToLP.cpp  PatcherMeshPostFixSSS.cpp  PatcherMeshPostHairFlowMap.cpp  PatcherMeshPostRestoreDefaultShaders.cpp  PatcherMeshPreDisableMLP.cpp  PatcherMeshPreFixEffectLightingCS.cpp  PatcherMeshPreFixMeshLighting.cpp  PatcherMeshPreFixTextureSlotCount.cpp  PatcherMeshShaderComplexMaterial.cpp  PatcherMeshShaderDefault.cpp  PatcherMeshShaderTransformParallaxToCM.cpp  PatcherMeshShaderTruePBR.cpp  PatcherMeshShaderVanillaParallax.cpp  PatcherTextureGlobalConvertToHDR.cpp  PatcherTextureHookConvertToCM.cpp  PatcherTextureHookFixSSS.cpp
PGLib/src/patchers/base/: Patcher.cpp  PatcherMesh.cpp  PatcherMeshGlobal.cpp  PatcherMeshPost.cpp  PatcherMeshPre.cpp  PatcherMeshShader.cpp  PatcherMeshShaderTransform.cpp  PatcherTexture.cpp  PatcherTextureGlobal.cpp  PatcherTextureHook.cpp  PatcherUtil.cpp
PGLib/src/pgutil/: PGEnums.cpp  PGMeshPermutationTracker.cpp  PGNIFUtil.cpp  PGTypes.cpp
PGLib/src/util/: ExceptionHandler.cpp  FileSaver.cpp  FileUtil.cpp  Logger.cpp  MeshTracker.cpp  NIFUtil.cpp  ParallaxGenUtil.cpp  StringUtil.cpp  TaskPoolRunner.cpp  TaskQueue.cpp  TaskTracker.cpp
PGLib/tests/: ParallaxGenD3DTests.cpp
PGMutagen/: .gitignore  CMakeLists.txt  PGMutagen.cs  PGMutagen.csproj  PGMutagen.csproj.in  PGMutagenBuffers.fbs
PGMutagen/include/: PGMutagenWrapper.hpp
PGMutagen/src/: PGMutagenWrapper.cpp
PGPatcher/: CMakeLists.txt
PGPatcher/include/: PGConfig.hpp  PGHandlers.hpp  PGPatcherGlobals.hpp  PGUI.hpp  ParallaxGenConfig.hpp  ParallaxGenHandlers.hpp  ParallaxGenUI.hpp
PGPatcher/include/GUI/: CompletionDialog.hpp  DialogModConflictView.hpp  DialogModifiableListCtrl.hpp  DialogRecTypeSelector.hpp  DialogTextureMapListCtrl.hpp  LauncherWindow.hpp  ModConflictDialog.hpp  ModSortDialog.hpp  ProgressWindow.hpp  WXLoggerSink.hpp
PGPatcher/include/GUI/components/: CheckedColorDragListCtrl.hpp  DragGhostWindow.hpp  PGCheckedDragListCtrl.hpp  PGCheckedDragListCtrlEvtItemChecked.hpp  PGCheckedDragListCtrlEvtItemDragged.hpp  PGCheckedDragListCtrlEvtMeshesIgnoredChanged.hpp  PGCheckedDragListCtrlGhostWindow.hpp  PGCustomListctrlChangedEvent.hpp  PGLogMessageListCtrl.hpp  PGModifiableListCtrl.hpp  PGTextureMapListCtrl.hpp
PGPatcher/resources/: icon.rc
PGPatcher/src/: PGConfig.cpp  PGPatcherGlobals.cpp  PGUI.cpp  ParallaxGenConfig.cpp  ParallaxGenUI.cpp  main.cpp
PGPatcher/src/GUI/: CompletionDialog.cpp  DialogModConflictView.cpp  DialogModifiableListCtrl.cpp  DialogRecTypeSelector.cpp  DialogTextureMapListCtrl.cpp  LauncherWindow.cpp  ModConflictDialog.cpp  ModSortDialog.cpp  ProgressWindow.cpp
PGPatcher/src/GUI/components/: CheckedColorDragListCtrl.cpp  DragGhostWindow.cpp  PGCheckedDragListCtrl.cpp  PGCheckedDragListCtrlEvtItemChecked.cpp  PGCheckedDragListCtrlEvtItemDragged.cpp  PGCheckedDragListCtrlEvtMeshesIgnoredChanged.cpp  PGCheckedDragListCtrlGhostWindow.cpp  PGCustomListctrlChangedEvent.cpp  PGLogMessageListCtrl.cpp  PGModifiableListCtrl.cpp  PGTextureMapListCtrl.cpp
PGTools/: CMakeLists.txt
PGTools/src/: main.cpp  main_linux_stub.cpp
nexus/: nexus-description.bb
package/: PG_YOU_CAN_DELETE_THIS_FILE.ini
(+12 files in other folders)
